--- a/app/src/main/res/layout/activity_volumes.xml
+++ b/app/src/main/res/layout/activity_volumes.xml
@@ -5,19 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/lblTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/strTitle"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+    tools:context=".Volumes">
 
     <ListView
-        android:id="@+id/lstOptions"
+        android:id="@+id/lstVolume"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
