--- a/app/src/main/res/layout/activity_areas.xml
+++ b/app/src/main/res/layout/activity_areas.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Areas">
+    tools:context=".AreasActivity">
 
     <TextView
         android:id="@+id/lblAreaTitle"
