--- a/app/src/main/res/layout/activity_square.xml
+++ b/app/src/main/res/layout/activity_square.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".area.Square">
+    tools:context=".area.SquareActivity">
 
     <TextView
         android:id="@+id/lblSquareTitle"
@@ -23,11 +23,12 @@
         android:text="@string/strSquereSide" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/txtSide"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="number"
+        android:autofillHints="" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:clickable="false"
+            android:onClick="calculateArea"
             android:text="@string/strCalculate" />
 
         <Button
@@ -46,6 +49,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="clear"
             android:text="@string/strClear" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="15sp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/lblResultTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strResult"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/lblSquareArea"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/btnOkSquare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strOkButton"
+            android:onClick="goArea"
+            android:visibility="invisible" />
     </LinearLayout>
 </LinearLayout>
