--- a/app/src/main/res/layout/activity_volumes.xml
+++ b/app/src/main/res/layout/activity_volumes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Volumes">
+    tools:context=".VolumesActivity">
 
     <ListView
         android:id="@+id/lstVolume"
